--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,11 +3,11 @@
 /*=============== VARIABLES =================== */
 :root {
   /*======= Colors ==========*/
-  --bg-color: #161A1D;
+  --bg-color: #161a1d;
   --primary-color: #660708;
-  --primary-alt: #A4161A;
-  --text-color: #F5F3F4;
-  --secondary-color: #0B090A;
+  --primary-alt: #a4161a;
+  --text-color: #f5f3f4;
+  --secondary-color: #0b090a;
 
   /*======= Font & Typography ========== */
   --preload-family: "Anton", sans-serif;
@@ -39,6 +39,14 @@ body {
   background: var(--bg-color);
 }
 
+main {
+  min-height: 100vh;
+}
+
+img{
+  max-width: 100%;
+}
+
 *,
 ::after,
 ::before {
@@ -60,21 +68,68 @@ body {
   left: 0;
   width: 100%;
   min-height: 100%;
+  transition: all 2s ease-out;
 }
 
-.preload h1 {
+.preload__title {
   color: var(--text-color);
   font-size: var(--biggest-font-size);
   letter-spacing: 3px;
   border-bottom: 2px solid var(--text-color);
 }
 
-.preload__box{
+.preload__box {
   width: 3rem;
   height: 3rem;
   background: var(--text-color);
-  border: .5rem solid var(--bg-color);
+  border: 0.5rem solid var(--bg-color);
   box-shadow: 0px 0px 0px 8px var(--text-color);
-  transform: rotate(45deg);
+  animation: rotation 2s infinite;
 }
 
+.preload--hide {
+  opacity: 0;
+  visibility: hidden;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/*============ MAIN ============*/
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+/*============ Game Settings =======0=*/
+.gameSettings {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  height: 25rem;
+  width: 25rem;
+  border-radius: 5px;
+  box-shadow: 0 0 20px 2px var(--primary-color);
+}
+
+.playerCard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+  flex-basis: 50%;
+}
+
+.playerCard__img{
+  width: 8rem;
+  margin: 2rem 0;
+}
