--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,7 @@
   --primary-color: #660708;
   --primary-alt: #a4161a;
   --text-color: #f5f3f4;
+  --alt-text-color: #d3d3d3;
   --secondary-color: #0b090a;
 
   /*======= Font & Typography ========== */
@@ -43,8 +44,12 @@ main {
   min-height: 100vh;
 }
 
-img{
+img {
   max-width: 100%;
+}
+
+button:focus{
+  outline: none;
 }
 
 *,
@@ -53,6 +58,10 @@ img{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+h1 {
+  font-size: var(--h1-font-size);
 }
 
 /*=============== Preload =================*/
@@ -108,28 +117,96 @@ img{
   justify-content: center;
 }
 
-
 /*============ Game Settings =======0=*/
 .gameSettings {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   height: 25rem;
-  width: 25rem;
+  width: 90%;
   border-radius: 5px;
-  box-shadow: 0 0 20px 2px var(--primary-color);
+  box-shadow: 0 0 10px 2px var(--primary-alt);
+  transform: scale(50%);
+  opacity: 0;
+  transition: transform 200ms ease-out,
+	      opacity 100ms ease-out;
 }
 
-.playerCard{
+.gameSettings--active{
+  transform: scale(100%);
+  opacity: 1;
+}
+
+.gameSettings__title {
+  flex-basis: 100%;
+  text-align: center;
+  color: var(--text-color);
+  margin-bottom: 1rem;
+}
+
+.playerCard {
+  align-self: flex-start;
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
-  flex-basis: 50%;
+  cursor: pointer;
 }
 
-.playerCard__img{
-  width: 8rem;
+.playerCard h3 {
+  color: var(--text-color);
+}
+
+.playerCard input {
+  color: var(--text-color);
+  font-family: inherit;
+  text-align: center;
+  max-width: 8rem;
+  height: 2rem;
+  background: transparent;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+  box-shadow: 0 0 10px 2px var(--secondary-color);
+  text-transform: uppercase;
+}
+
+.playerCard input::placeholder {
+  color: var(--alt-text-color);
+}
+
+.playerCard__img {
+  width: 6rem;
   margin: 2rem 0;
+  filter: invert(100%);
+  transition: filter .2s ease-out;
+}
+
+.playerCard__img:hover{
+  filter: invert(50%);
+}
+
+/* Button */
+.btn {
+  font-family: inherit;
+  font-weight: var(--bold-font);
+  font-size: var(--normal-font-size);
+  color: var(--text-color);
+  flex-basis: 30%;
+  height: 3rem;
+  cursor: pointer;
+  background: var(--primary-color);
+  border: none;
+  border-radius: 5px;
+  transition: all 0.1s ease-in;
+  margin-bottom: 0.5rem;
+}
+
+.btn:hover {
+  box-shadow: 0 0 2px 1px var(--alt-text-color);
+  background: var(--primary-alt);
+}
+
+.btn:active {
+  transform: scale(0.9);
 }
